Fix horizontal scroll

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,7 +57,8 @@ a:hover{
 .bottom-header{
   position: absolute;
   top:100px;
-  width:100vw;
+  width:90vw;
+  left:100px;
 }
 
 .opaque{
@@ -284,4 +285,8 @@ li a:hover{
   text-align: justify;
   font-family: var(--main-font);
   color:var(--text-color);
+}
+
+.col-md-6{
+  width:90%;
 }
